# learns

./: .gitignore  LICENSE  README.md
.github/workflows/: sync_leetcode.yml
advent-of-code/: .gitignore  README.md
advent-of-code/2015/: day_1_part_1_and_2.py  day_2_part_1_and_2.py  day_3_part_2.py  day_4_part_1.py  day_4_part_2.py  day_5_part_1.py  day_5_part_2.py  day_6_part_1.py  day_6_part_2.py  day_7_part_1.py  day_7_part_2.py
airflow/dags/: scripts.py  tutorial2.py
codeabbey/: .gitignore  README.md
codeabbey/1/: Cargo.toml
codeabbey/10/: Cargo.toml
codeabbey/11/: Cargo.toml
codeabbey/12/: input.txt  main.py
codeabbey/2/: Cargo.toml
codeabbey/3/: Cargo.toml
codeabbey/4/: Cargo.toml
codeabbey/5/: Cargo.toml
codeabbey/6/: Cargo.toml
codeabbey/7/: Cargo.toml
codeabbey/8/: Cargo.toml
codeabbey/9/: Cargo.toml
dailyprogrammer/: README.md
dash-tutorial/: app.py  callback2.py  chained_callbacks.py  components.py  form.py  multipage.py  multiple_inputs.py  state.py
hands-on-machine-learning/: ch2.ipynb
hydra/: my_app.py
learn-d3js/: README.md
learn-dbt/: dbt_project.yml
learn-elixir/: simple.exs
learn-meltano/: .gitignore  Dockerfile  meltano.yml
learn-prefect/: calculator.py  cron.py  etl.py  etl_imperative.py  hello.py  hello_imperative.py  ordered.py
manning/: README.md
python-for-data-science/: .gitignore  README.md  Slack Analytics.ipynb
python-gis/: README.md  lesson1.ipynb  lesson2.ipynb  pyproject.toml
streamlit/: first_app.py  uber_pickups.py
writing/: incremental_quality.md  tech_debt.md
(+211 files in other folders)
